WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264690
When using opacity slider in color input, safari crashes the tab
https://bugs.webkit.org/show_bug.cgi?id=264690
Summary
When using opacity slider in color input, safari crashes the tab
pezza
Reported
2023-11-11 16:54:35 PST
Created
attachment 468571
[details]
The color input tab with the opacity slider. If you slide the opacity slider of a color input a crash occurs. Initially safari tries reloading the page but then if you try again though safari crashes the tab with the message "A problem repeatedly occurred with "{url}". If you go to the MDN doc site and mess with the color inputs in the example you can trigger the crash:
https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/color
. Or you drop `<input type="color" value="#e66465" />` into an html file and open it and mess with that.
Attachments
The color input tab with the opacity slider.
(324.65 KB, image/png)
2023-11-11 16:54 PST
,
pezza
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2023-11-14 11:20:13 PST
I can reproduce this with STP and with built-in Safari on macOS 14.2 beta. Didnt' try older versions.
Radar WebKit Bug Importer
Comment 2
2023-11-14 11:20:30 PST
<
rdar://problem/118408313
>
Aditya Keerthi
Comment 3
2023-11-14 16:37:47 PST
I have a fix for this, just need to write a test.
Aditya Keerthi
Comment 4
2023-11-14 23:50:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20527
EWS
Comment 5
2023-11-15 12:49:48 PST
Committed
270786@main
(612abb26e5a3): <
https://commits.webkit.org/270786@main
> Reviewed commits have been landed. Closing PR #20527 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug